# fpl-etl

./: .gitignore  .pre-commit-config.yaml  404.html  JustFile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
docs/src/etl/: extractors.md  loaders.md  pipeline.md  utils.md
search/: search_index.json
src/etl/: extractors.py  loaders.py  pipeline.py  utils.py
src/etl/extractors/: index.html
src/etl/loaders/: index.html
src/etl/pipeline/: index.html
src/etl/utils/: index.html
tests/: test_extract.py  test_load.py  test_pipeline.py
