[project]
name = "etl"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pranav Dave", email = "75449103+pdave34@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "oracledb>=3.4.2",
    "polars>=1.38.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=8.18.1",
    "matplotlib>=3.10.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-order>=1.3.0",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.2",
]

[tool.ruff]
line-length = 100
extend-exclude = ["notebook.*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "--cov=etl --cov-report html"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
]
